Fixed text overflow and non-groupmember user details in message list

--- a/src/css/DashboardView.css
+++ b/src/css/DashboardView.css
@@ -10,7 +10,6 @@ body {
     padding: 0;
     min-height: 100vh;
     height: 100vh;
-    min-width: fit-content;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -46,6 +45,7 @@ body {
     height: 100%;
     display: flex;
     flex-flow: column nowrap;
+    flex-shrink: 0;
 }
 
 .dbGroupHome {
@@ -119,6 +119,26 @@ body {
 .dbGroupImg:hover {
     border-radius: 20px;
 }
+
+.dbGroupNameTooltip {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 105%;
+  }
+  
+  .dbGroupImg:hover .dbGroupNameTooltip:hover {
+    visibility: visible;
+  }
 
 .dbChannelCol {
     margin: 0;
@@ -368,9 +388,8 @@ body {
     padding: 0;
     display: flex;
     flex-flow: row nowrap;
-    width: 100%;
-    height: 100%;
     min-height: 72px;
+    max-width: fit-content;
 }
 
 .dbMsgImg {
@@ -381,6 +400,7 @@ body {
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-evenly;
+    flex-shrink: 0;
 }
 
 .dbMsgImg img {
@@ -395,8 +415,8 @@ body {
 
 .dbMsgContentWrap {
     margin: 0;
+    margin-right: 72px;
     padding: 0;
-    flex-grow: 1;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -404,7 +424,6 @@ body {
 .dbMsgInfo {
     margin: 0;
     padding: 0;
-    width: 100%;
     height: 34px;
     display: flex;
     flex-flow: row nowrap;
@@ -427,6 +446,7 @@ body {
     font-weight: 400;
     color: rgb(114, 118, 125);
     line-height: 1.7rem;
+    white-space: nowrap;
 }
 
 .dbMsgContent {
@@ -438,6 +458,7 @@ body {
     font-size: 1.5rem;
     font-weight: 400;
     color: rgb(220, 221, 222);
+    word-break: break-all;
 }
 
 .dbSubmitMsg {
